test: enhance test to verify resend (#1756)
Signed-off-by: Mustafa Uzun <mustafa.uzun@limechain.tech>